Contrast issues

--- a/css/init.scss
+++ b/css/init.scss
@@ -420,7 +420,7 @@ width: 100%;
 }
 
 .access-link {
-background-color: #777;
+background-color: #767676;
 border-radius: em(5);
 border: rem(1) white solid;
 color: #fff;
